--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -45,6 +45,7 @@
 
         <FrameLayout
             android:id="@+id/fragment_container"
+            android:layout_marginTop="64dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
