--- a/app/src/main/res/layout/item_definition.xml
+++ b/app/src/main/res/layout/item_definition.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.jishorough2.EntryView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAlignment="textEnd">
+    android:layout_margin="2dp"
+    android:background="@drawable/definition_box"
+    android:padding="4dp"
+    android:textAlignment="textEnd"
+    android:textColor="#FFFFFF">
 
-</TextView>
+</com.example.jishorough2.EntryView>
