Add Lists layout holder, go to lists layout when click lists

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,17 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/account">
         <menu>
-            <item android:title="@string/user"
+            <item
+                android:id="@+id/menu_item_user"
+                android:title="@string/user"
                 android:icon="@drawable/ic_account_circle_black_24dp"/>
-            <item android:title="@string/my_lists"
+            <item
+                android:id="@+id/menu_item_lists"
+                android:title="@string/my_lists"
                 android:icon="@drawable/ic_view_list_black_24dp"/>
         </menu>
     </item>
     <item android:title="@string/app">
         <menu>
-            <item android:title="@string/settings"
+            <item
+                android:id="@+id/menu_item_settings"
+                android:title="@string/settings"
                 android:icon="@drawable/ic_settings_black_24dp"/>
-            <item android:title="@string/log_out"
+            <item
+                android:id="@+id/menu_item_log_out"
+                android:title="@string/log_out"
                 android:icon="@drawable/ic_power_settings_new_black_24dp"/>
         </menu>
     </item>
