--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -25,6 +25,18 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:layout_marginTop="64dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        </androidx.fragment.app.FragmentContainerView>
+
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -35,21 +47,4 @@
         app:menu="@menu/nav_menu">
 
     </com.google.android.material.navigation.NavigationView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".MainActivity">
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_marginTop="64dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-        </FrameLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
